--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Matqx | Portfolio</title>
+    <title>Strength | Elite Hosting</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -39,7 +39,7 @@
         </nav>
         <div class="landing-text">
             <h1>Strength Hosting Panel</h1>
-            <h6>Coming to you Shortly, late in October.</h6>
+            <h6>Coming to you Shortly</h6>
         </div>  
     </header>
 
